--- a/mysite/single_page/templates/single_page/about_me.html
+++ b/mysite/single_page/templates/single_page/about_me.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
+/*<link rel="stylesheet" href="style.css">*/
 
 <head>
     <meta charset="'UTF-8">
@@ -8,7 +8,7 @@
     <canvas class="canvas" width="300" height="100"></canvas>
     <title>시..시시시!</title>
     <script>
-        function executePath() {
+        function executePath2() {
             window.location.href = "two.html";
         }
     </script>
@@ -22,7 +22,7 @@
     </div>
     <div>
         <button onclick=>포기하기</button>
-        <button onclick="executePath()">그래도 고?</button>
+        <button onclick="executePath2()">그래도 고?</button>
     </div>
 
 
