--- a/mysite/single_page/templates/single_page/landing.html
+++ b/mysite/single_page/templates/single_page/landing.html
@@ -8,8 +8,8 @@
     <canvas class="canvas" width="300" height="100"></canvas>
     <title>시..시시시!</title>
     <script>
-        function executePath() {
-            window.location.href = "one.html";
+        function executePath1() {
+            window.location.href = "about_me.html";
         }
     </script>
 </head>
@@ -22,7 +22,7 @@
     </div>
     <div>
         <button onclick=>뭐행?</button>
-        <button onclick="executePath()">다음</button>
+        <button onclick="executePath1()">다음</button>
     </div>
 
 
