--- a/mysite/single_page/templates/single_page/two.html
+++ b/mysite/single_page/templates/single_page/two.html
@@ -9,7 +9,7 @@
     <title>시..시시시!</title>
     <script>
         function executePath() {
-            window.location.href = "three.html";
+            window.location.href = "three/";
         }
     </script>
 </head>
