--- a/mysite/single_page/templates/single_page/index.html
+++ b/mysite/single_page/templates/single_page/index.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+
+<!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
 <head>
     <meta charset="'UTF-8">
     <canvas class="canvas" width="300" height="100"></canvas>
