--- a/mysite/single_page/templates/single_page/three.html
+++ b/mysite/single_page/templates/single_page/three.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html>
 {% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+
+<!DOCTYPE html>
 <html lang="en">
-<link rel="stylesheet" href="style.css">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>simpleMap</title>
