--- a/mysite/single_page/templates/single_page/two.html
+++ b/mysite/single_page/templates/single_page/two.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
 {% load static %}
-<html lang="en">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="'UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
