--- a/mysite/single_page/templates/single_page/two.html
+++ b/mysite/single_page/templates/single_page/two.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
 
 <!DOCTYPE html>
 <html lang="en">
