--- a/mysite/single_page/templates/single_page/index.html
+++ b/mysite/single_page/templates/single_page/index.html
@@ -1,15 +1,15 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'bootstrap.min.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
 
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="'UTF-8">
     <canvas class="canvas" width="300" height="100"></canvas>
-    <title>시..시시시!</title>
+    <title>데이터 청년 캠퍼스</title>
     <script>
-        function executePath1() {
-            window.location.href = "one/";
+        function executePath() {
+            window.location.href = "autonomous/";
         }
     </script>
 </head>
@@ -17,12 +17,11 @@
 <body>
     <div>
         <h1>
-            슈슈슉
+            구해줘 홈즈
         </h1>
     </div>
     <div>
-        <button onclick=>뭐행?</button>
-        <button onclick="executePath1()">다음</button>
+        <button onclick="executePath()">시작하기</button>
     </div>
 
 
