--- a/mysite/single_page/templates/single_page/qq.html
+++ b/mysite/single_page/templates/single_page/qq.html
@@ -10,10 +10,8 @@
 </head>
 <body>
     <h1>걸러진 우편번호</h1>
-    <ul>
-        {% for item in filtered_data %}
-        <li>{{ item.zipcode }}</li>
-        {% endfor %}
-    </ul>
+    <h3>
+        남은 우편번호 : {{num}}개
+    </h3>
 </body>
 </html>
