--- a/mysite/single_page/templates/single_page/check_and_filter.html
+++ b/mysite/single_page/templates/single_page/check_and_filter.html
@@ -29,6 +29,7 @@
     <input type="submit" value="작성">
 </form>
 <h2>조건 충족하는 놈들</h2>
+<div>남은 우편번호 : {{num}}개</div>
     <table>
         <tr>
             <th>우편번호</th>
