--- a/mysite/single_page/templates/single_page/index.html
+++ b/mysite/single_page/templates/single_page/index.html
@@ -9,7 +9,7 @@
     <title>데이터 청년 캠퍼스</title>
     <script>
         function executePath() {
-            window.location.href = "autonomous/";
+            window.location.href = "check_and_filter/";
         }
     </script>
 </head>
