--- a/mysite/single_page/templates/single_page/category.html
+++ b/mysite/single_page/templates/single_page/category.html
@@ -23,10 +23,22 @@
         /* 필요한 경우, 추가적인 스타일 정의 */
         /* .checkbox-grid label {
             /* 원하는 스타일 정의 */
+        .facility-section label {
+            font-size: 20px; /* 체크박스 글씨 크기 조정 */
+            margin: 5px 0; /* 체크박스 간격 조정 */
+            /* display: flex; 체크박스와 글씨를 가로로 정렬 */
+            align-items: center; /* 가운데 정렬 */
+        }    
+        .facility-section input[type="checkbox"] {
+            width: 20px; /* 체크박스의 가로 크기 조정 */
+            height: 20px; /* 체크박스의 세로 크기 조정 */
+            margin-right: 8px; /* 체크박스와 글씨 사이 간격 조정 */
+        }
+
     </style>
     <canvas class="canvas" width="300" height="100"></canvas>
-    <script>
-    </script>
+    <script src="script.js?v=12345"></script>
+
 </head>
 
 <body>
@@ -43,10 +55,13 @@
             {% csrf_token %}
             <section class="facility-section">
                 <h2> ▶ 공공기관 </h2>
+            
                 <label><input type="checkbox" name="selected_items" value="police_office"> 경찰서</label>
                 <label><input type="checkbox" name="selected_items" value="post_office"> 우체국</label>
                 <label><input type="checkbox" name="selected_items" value="citizen_center"> 주민센터</label>
+            
             </section>
+
             
             <section class="facility-section">
                 <h2> ▶ 교통  </h2>
@@ -113,7 +128,7 @@
                 <label><input type="checkbox" name="selected_items" value="temple"> 절 </label>
             </section>
 
-            <button type="submit">다음</button>
+            <button type="submit" id="next">다음</button>
         </form> 
         <script>
             function goBack() {
@@ -123,10 +138,6 @@
     <button onclick="goBack()">뒤로가기</button>
 </body>
 </html>
-
-
-
-
 
 <!-- {% load static %}
 <link rel="stylesheet" type="text/css" href="{% static 'style.css' %}">
