--- a/mysite/single_page/templates/single_page/category.html
+++ b/mysite/single_page/templates/single_page/category.html
@@ -55,37 +55,44 @@
             {% csrf_token %}
             <section class="facility-section">
                 <h2> ▶ 공공기관 </h2>
-            
+            <div class="box">
                 <label><input type="checkbox" name="selected_items" value="police_office"> 경찰서</label>
                 <label><input type="checkbox" name="selected_items" value="post_office"> 우체국</label>
                 <label><input type="checkbox" name="selected_items" value="citizen_center"> 주민센터</label>
-            
+            </div>
             </section>
 
             
             <section class="facility-section">
                 <h2> ▶ 교통  </h2>
+            <div class="box">
                 <label><input type="checkbox" name="selected_items" value="bus_stop"> 버스 정류장</label>
                 <label><input type="checkbox" name="selected_items" value="bike"> 자전거 대여소</label>
                 <label><input type="checkbox" name="selected_items" value="subway"> 지하철 역</label>
+            </div>
             </section>
             
-            <section class="facility-section">
+            <section class="facility-section">    
                 <h2> ▶ 금융  </h2>
+            <div class = "box">
                 <label><input type="checkbox" name="selected_items" value="bank"> 은행 </label>
                 <label><input type="checkbox" name="selected_items" value="atm"> ATM </label>
+            </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 문화시설  </h2>
+            <div class = "box">
                 <label><input type="checkbox" name="selected_items" value="perform_place"> 공연장 </label>
                 <label><input type="checkbox" name="selected_items" value="liberary"> 도서관 </label>
                 <label><input type="checkbox" name="selected_items" value="theater"> 영화관</label>
                 <label><input type="checkbox" name="selected_items" value="art"> 전시,미술관</label>
+            </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 생활시설  </h2>
+            <div class = "box">
                 <label><input type="checkbox" name="selected_items" value="food_store"> 음식점 </label>
                 <label><input type="checkbox" name="selected_items" value="bar"> 유흥주점 </label>
                 <label><input type="checkbox" name="selected_items" value="cafe"> 카페, 디저트</label>
@@ -101,10 +108,12 @@
                 <label><input type="checkbox" name="selected_items" value="coin_karaoke"> 코인노래방</label>
                 <label><input type="checkbox" name="selected_items" value="coin_wash_room"> 코인세탁</label>
                 <label><input type="checkbox" name="selected_items" value="beatuy_care"> 뷰티케어</label>
+            </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 운동시설 </h2>
+            <div class = "box">    
                 <label><input type="checkbox" name="selected_items" value="gym"> 헬스클럽 </label>
                 <label><input type="checkbox" name="selected_items" value="yoga"> 요가 </label>
                 <label><input type="checkbox" name="selected_items" value="piilates"> 필라테스</label>
@@ -112,20 +121,25 @@
                 <br>
                 <label><input type="checkbox" name="selected_items" value="park"> 공원</label>
                 <label><input type="checkbox" name="selected_items" value="gonggogng_gym"> 공공체육시설</label>
+            </div>
             </section>
 
             <section class="facility-section">
                 <h2> ▶ 의료  </h2>
+            <div class = "box">    
                 <label><input type="checkbox" name="selected_items" value="hospital"> 병원 </label>
                 <label><input type="checkbox" name="selected_items" value="pharmacy"> 약국 </label>
                 <label><input type="checkbox" name="selected_items" value="animal_hospital"> 동물병원 </label>
+            </div>
             </section>
             
             <section class="facility-section">
                 <h2> ▶ 종교  </h2>
+            <div class = "box">
                 <label><input type="checkbox" name="selected_items" value="church"> 교회 </label>
                 <label><input type="checkbox" name="selected_items" value="chatolic"> 성당 </label>
                 <label><input type="checkbox" name="selected_items" value="temple"> 절 </label>
+            </div>
             </section>
 
             <button type="submit" id="next">다음</button>
